# cogdiff

./: .gitignore  CITATION.cff  README.md  pyproject.toml  pytest.ini  requirements.txt
config/: cnlsy.yml  models.yml  nlsy79.yml  nlsy97.yml  paths.yml  preflight.yml  robustness.yml
docs/: family.html  faq.html  index.html  measurement.html  methodology.html  outcomes.html  subgroups.html
public_facing_docs/: DATA.md  FAQ.md  GLOSSARY.md  METHODS.md  README.md  REPRODUCE.md  RESULTS.md
scripts/: 00_download_raw.py  01_unpack_and_index.py  02_build_variable_map.py  03_extract_cohort_panel.py  04_export_links.py  04_export_links_nlsylinks.R  05_construct_samples.py  06_age_residualize.py  07_fit_sem_models.py  08_invariance_and_partial.py  09_results_and_figures.py  10_cnlsy_development.py  11_robustness_suite.py  12_missingness_diagnostics.py  13_run_pipeline-BMBP.py  13_run_pipeline.py  14_reproducibility_report.py  15_specification_curve_summary.py  16_preflight_dependencies.py  17_generate_robustness_variant.py  18_run_harmonization_rerun.py  19_run_sampling_rerun.py  20_run_inference_bootstrap.py  21_run_age_adjustment_rerun.py  22_run_model_form_rerun.py  23_run_weights_rerun.py  24_build_publication_results_lock.py  25_verify_publication_snapshot.py  26_build_discrepancy_attribution.py  27_build_harmonization_audit.py  28_run_dedup_seed_sensitivity.py  29_build_claim_verdicts.py  30_check_inference_ci_coherence.py  31_export_report_sections.py  32_recover_spark_prompts.py  33_run_publication_refresh.py  34_build_subtest_profiles.py  36_build_cohort_trends.py  (+63 more)
(+213 files in other folders)
