[project]
name = "cogdiff"
version = "0.1.0"
description = "Analysis pipeline for sex differences in latent g from NLS cohorts"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.32.0",
  "pandas>=2.2.0",
  "numpy>=2.1.0",
  "pyyaml>=6.0.0",
  "tqdm>=4.66.0",
  "polars>=1.10.0",
  "pyarrow>=18.0.0",
  "duckdb>=1.1.0",
  "statsmodels>=0.14.0",
  "scipy>=1.14.0",
  "matplotlib>=3.9.0",
  "rich>=13.9.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
